# catalog_suffix_fixer

./: README.rst  pyproject.toml  script.py
catalog_suffix_fixer/: __init__.py
catalog_suffix_fixer/functions/: logging.py  monitor.py  parsing.py
tests/: test_catalog_suffix_fixer.py
