[tool.poetry]
name = "catalog_suffix_fixer"
version = "0.1.0"
description = ""
authors = ["Nicolas J. Dowdy <njdowdy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.5.3"
watchdog = "^2.1.6"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
